# DuctTeip

./: .gitignore  New Text Document.txt  README.md  aa.txt
ResStudio/Prototype/: .gitignore  CMakeLists.txt  Doxyfile  Keb_Makefile  Makefile  MakefileOld  Works.ToDo.docx  Works.xlsx  WorksToDo.txt  basic.hpp  c.cpp  check_comp.h  chol_fact.hpp  config.hpp  context.hpp  ctx_run  data.hpp  dt_log.hpp  dt_thread_manager.hpp  dt_util.hpp  ductteip.h  engine.hpp  generic_contexts.hpp  glb_context.hpp  hostpolicy.hpp  listener.hpp  mailbox.hpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main8.cpp  main9.cpp  mat_asm.hpp  memory_manager.hpp  mpi_comm.hpp  network.hpp  partition.hpp  procgrid.hpp  readme  (+18 more)
ResStudio/Prototype/130909/: Works.ToDo  Works.ToDo.docx  Works.xlsx  main1.cpp  main2.cpp  main4.cpp  main5.cpp  main6.cpp  main8.cpp  mainX.cpp  run.sh  run8.sh  run8kalkyl.sh  taskgen_compare.py  taskgenplot.py  todo.txt
ResStudio/Prototype/NP_6/: stat_nb-100.txt  stat_nb-50.txt  taskgen_compare.py
ResStudio/Prototype/NP_6-1/: a.txt  a2.xlsx  stat_compare_Np-6.txt  stat_nb-300.txt  stat_nb-400.txt  stat_nb-500.txt  taskgen_compare.py
ResStudio/Prototype/NP_6-2/: stat_nb-200.txt  stat_nb-400.txt
ResStudio/Prototype/Simulation/: main.m  test1.m
ResStudio/Prototype/bak/: ctx_bndry.hpp
ResStudio/Prototype/examples/: Develop-LibTest-N01--10226781  Develop-LibTest-N02-8996122  Develop-LibTest-N02-9046864  Develop-LibTest-N02-9047071  Develop-LibTest-N02-9047242  Develop-LibTest-N02-9047249  LibTest-8747912  Makefile  Product-N02-LibTest-9047054  check_comp.h  cholesky.cpp  cholesky.hpp  dt_util.cpp  dt_util.hpp  gemm.hpp  main.cpp  potrf.hpp  run  syrk.hpp  (+7 more)
(+3368 files in other folders)
